<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieAct"
    android:background="#fcd9d3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:clickable="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="25dp">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textSize="24sp" />


        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.Holo.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:numStars="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/image"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnShow"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/show"
                android:textColor="?attr/colorAccent" />

        </LinearLayout>

        <ImageView
            android:layout_marginBottom="10dp"
            android:id="@+id/imageView"
            android:layout_width="220dp"
            android:layout_height="190dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/overview"
            android:inputType="textMultiLine"
            android:lines="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="soundtrack"
                android:textColor="?attr/colorAccent" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="?attr/colorAccent" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>